2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Taper/Scan.pm: POD fixes, add user_msg_fn key
	* perl/Amanda/Taper/Scan/traditional.pm: call user_msg_fn on
	  search failure; check for failure before printing "slot N"
	  prefix
	* server-src/amcheck-device.pl: implement new user_msg_fn key
	  to print expected volume on failure

2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Device.pod: document that finish() can be called even
	  if start() was not, to release resources
	* device-src/ndmp-device.c: implement
	* device-src/tape-device.c: implement
	* perl/Amanda/Changer.pm: always finish() a device in $res->release()

2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/run-ndmp.pl: development util to run ndmjob test daemon
	* installcheck/Makefile.am: add util

2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/infofile.c: use %lld in scanning instead of %jd,
	  since Solaris 8 doesn't have %j support; also fix handling
	  of parse errors

2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: treat NDMP9_DEVICE_BUSY_ERR as
	  DEVICE_STATUS_DEVICE_BUSY

2010-04-05  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer.pm: check $err->failed before returning reason

2010-04-02  Paul C. Mantz <pcmantz@zmanda.com>
	* server-src/amreport.pl: honor SEND_AMREPORT_ON in script mode
	* perl/Amanda/Config.swg: swig CNF_SEND_AMREPORT_ON
	* installcheck/amreport.pl: installchecks

2010-04-02  Paul C. Mantz <pcmantz@gmail.com>
	* server-src/amreport.pl: accepts and ignores disk args in script mode
	* installcheck/amreport.pl: checks

2010-04-02  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Util.pod: correct inaccurate claims in burp

2010-04-02  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Application.swg: fix situation where sizeof(IV) >
	  sizeof(gint)

2010-04-02  Jean-Louis Martineau <martineau@zmanda.com>